refactor: fallback to java 11 syntax